# serde

./: .gitignore  CHANGES.md  CONTRIBUTING.md  Makefile  README.md  asdf.ml  dune-project  flake.nix  serde.opam  serde_debug.opam  serde_derive.opam  serde_json.opam  serde_sexpr.opam  serde_xml.opam
.github/workflows/: main.yml
bench/: dune  json.ml
derive/: attributes.ml  de.ml  dune  ser.ml
derive/common.t/: common_test.ml  dune  ppx_test.ml  run.t
derive/ppx.t/: dune  ppx_test.ml  record_test.ml  run.t  variant_test.ml
derive/records.t/: dune  ppx_test.ml  run.t
derive/variants.t/: dune  run.t  variant_adjacently_tagged_test.ml  variant_externally_tagged_test.ml  variant_internally_tagged_test.ml
examples/: dune  starfleet.ml  starfleet_expanded.ml
serde/: data.ml  de.ml  dune  json.ml  ser.ml  serde.ml  serde.opam  serde_test.ml  sexpr.ml
serde/de/: de.ml  deserializer.ml  dune  error.ml  impls.ml  intf.ml  map_access.ml  reader.ml  reader.mli  sequence_access.ml  unimplemented.ml  variant_access.ml  visitor.ml
serde_debug/: dune  serde_debug.ml
serde_derive/: de.ml  de_abstract.ml  de_base.ml  de_record.ml  de_variant.ml  dune  ser.ml
serde_json/: dune  json.ml  json_de.ml  json_ser.ml  serde_json.ml  serde_json_rename_test.ml  serde_json_test.ml  test.ml
serde_ppx/: dune
serde_sexpr/: dune  serde_sexpr.ml  sexpr_de.ml  sexpr_ser.ml  test.ml
serde_xml/: dune  serde_xml.ml
test/: dune  expanded.ml  manual_de.ml  manual_ser.ml  test_de.ml  test_de_json.ml  test_de_sexpr.ml  test_derive.ml  test_derive_de.ml
