(library
 (public_name serde_json)
 (modules serde_json)
 (libraries serde rio yojson))

(test
 (package serde_json)
 (name serde_json_test)
 (modules serde_json_test)
 (libraries serde_json serde qcheck spices)
 (preprocess
  (pps serde_derive)))

(test
 (package serde_json)
 (name serde_json_rename_test)
 (modules serde_json_rename_test)
 (libraries serde_json serde qcheck spices)
 (preprocess
  (pps serde_derive)))
