(library
 (public_name serde_sexpr)
 (libraries serde sexplib)
 (modules serde_sexpr sexpr_de sexpr_ser))

(library
 (package serde_sexpr)
 (name test_sexpr)
 (modules test)
 (inline_tests)
 (preprocess
  (pps serde_derive ppx_inline_test ppx_deriving.eq))
 (libraries serde serde_derive serde_sexpr))
