(library
 (name manual_de)
 (modules manual_de)
 (inline_tests)
 (preprocess
  (pps serde_derive ppx_inline_test))
 (libraries serde serde_derive serde_sexpr serde_json serde_xml))

(executable
 (name test_derive)
 (modules test_derive)
 (preprocess
  (pps serde_derive))
 (libraries serde serde_derive serde_sexpr serde_json serde_xml))

(executable
 (name demo)
 (modules demo)
 (preprocess
  (pps serde_derive))
 (libraries serde serde_derive serde_sexpr serde_json serde_xml))
